lang/tests/derive/sol/ui/fail/04-generic.rs
use liquid::State;
use liquid_lang as liquid;

#[derive(State)]
pub struct MyStruct<T> {
    a: T,
}

fn main() {}
