lang/tests/derive/sol/ui/fail/04-generic.stderr
error: generic structs are not supported
 --> $DIR/04-generic.rs:5:20
  |
5 | pub struct MyStruct<T> {
  |                    ^^^
